Update links in option cards for physics content

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     </div>
 
     <div class="cards-grid">
-      <div class="option-card" onclick="window.location.href='simulador.html'">
+      <div class="option-card" onclick="window.location.href='fisica_simulador.html'">
         <span class="card-icon">🚀</span>
         <h2 class="card-title">Simulador</h2>
         <p class="card-description">
@@ -198,7 +198,7 @@
         <a href="simulador.html" class="card-btn">Iniciar Simulador</a>
       </div>
 
-      <div class="option-card" onclick="window.location.href='teoria.html'">
+      <div class="option-card" onclick="window.location.href='fisica_teoria.html'">
         <span class="card-icon">📚</span>
         <h2 class="card-title">Teoría</h2>
         <p class="card-description">
@@ -208,7 +208,7 @@
         <a href="teoria.html" class="card-btn">Estudiar Teoría</a>
       </div>
 
-      <div class="option-card" onclick="window.location.href='evaluacion.html'">
+      <div class="option-card" onclick="window.location.href='fisica_evaluacion.html'">
         <span class="card-icon">✏️</span>
         <h2 class="card-title">Evaluación</h2>
         <p class="card-description">
@@ -225,4 +225,3 @@
   </div>
 </body>
 </html>
-
