--- a/fisica_evaluacion.html
+++ b/fisica_evaluacion.html
@@ -199,9 +199,9 @@
       </a>
       <div class="nav-links">
         <a href="index.html">🏠 Inicio</a>
-        <a href="simulador.html">🚀 Simulador</a>
-        <a href="teoria.html">📚 Teoría</a>
-        <a href="evaluacion.html" class="active">✏️ Evaluación</a>
+        <a href="fisica_simulador.html">🚀 Simulador</a>
+        <a href="fisica_teoria.html">📚 Teoría</a>
+        <a href="fisica_evaluacion.html" class="active">✏️ Evaluación</a>
       </div>
     </nav>
   </header>
