--- a/fisica_simulador.html
+++ b/fisica_simulador.html
@@ -216,9 +216,9 @@
       </a>
       <div class="nav-links">
         <a href="index.html">🏠 Inicio</a>
-        <a href="simulador.html" class="active">🚀 Simulador</a>
-        <a href="teoria.html">📚 Teoría</a>
-        <a href="evaluacion.html">✏️ Evaluación</a>
+        <a href="fisica_simulador.html" class="active">🚀 Simulador</a>
+        <a href="fisica_teoria.html">📚 Teoría</a>
+        <a href="fisica_evaluacion.html">✏️ Evaluación</a>
       </div>
     </nav>
   </header>
