Update navigation links in fisica_teoria.html

--- a/fisica_teoria.html
+++ b/fisica_teoria.html
@@ -195,9 +195,9 @@
       </a>
       <div class="nav-links">
         <a href="index.html">🏠 Inicio</a>
-        <a href="simulador.html">🚀 Simulador</a>
-        <a href="teoria.html" class="active">📚 Teoría</a>
-        <a href="evaluacion.html">✏️ Evaluación</a>
+        <a href="fisica_simulador.html">🚀 Simulador</a>
+        <a href="fisica_teoria.html" class="active">📚 Teoría</a>
+        <a href="fisica_evaluacion.html">✏️ Evaluación</a>
       </div>
     </nav>
   </header>
