--- a/fisica_teoria.html
+++ b/fisica_teoria.html
@@ -196,7 +196,7 @@
       <div class="nav-links">
         <a href="index.html">🏠 Inicio</a>
         <a href="fisica_simulador.html">🚀 Simulador</a>
-        <a href="fisica_teoria.html" class="active">📚 Teoría</a>
+        <a href="fisica_teoria.html">📚 Teoría</a>
         <a href="fisica_evaluacion.html">✏️ Evaluación</a>
       </div>
     </nav>
