Update links to new physics simulator and theory pages

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           Experimenta en tiempo real con velocidad, ángulo y gravedad. 
           Observa cómo cambia la trayectoria parabólica.
         </p>
-        <a href="simulador.html" class="card-btn">Iniciar Simulador</a>
+        <a href="fisica_simulador.html" class="card-btn">Iniciar Simulador</a>
       </div>
 
       <div class="option-card" onclick="window.location.href='fisica_teoria.html'">
@@ -205,7 +205,7 @@
           Aprende las fórmulas y conceptos fundamentales del movimiento parabólico 
           con ejemplos visuales.
         </p>
-        <a href="teoria.html" class="card-btn">Estudiar Teoría</a>
+        <a href="fisica_teoria.html" class="card-btn">Estudiar Teoría</a>
       </div>
 
       <div class="option-card" onclick="window.location.href='fisica_evaluacion.html'">
@@ -215,7 +215,7 @@
           Pon a prueba tus conocimientos con nuestro quiz interactivo 
           de auto-corrección inmediata.
         </p>
-        <a href="evaluacion.html" class="card-btn">Tomar Evaluación</a>
+        <a href="fisica_evaluacion.html" class="card-btn">Tomar Evaluación</a>
       </div>
     </div>
   </div>
