--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
   </div>
 
   <div class="footer">
-    Todos los derechos reservados © · Autores: Diego Ramos, Ashley Reyes y Jhordan Vite · 2025
+    Todos los derechos reservados © · Autores: Diego Ramos, Ashley Reyes y Jordan Vite · 2025
   </div>
 </body>
 </html>
