--- a/fisica_evaluacion.html
+++ b/fisica_evaluacion.html
@@ -253,7 +253,7 @@
       </form>
     </div>
 
-    <div class="footer">Todos los derechos reservados © · Autores: Diego Ramos Y Ashley Reyes · 2025</div>
+    <div class="footer">Todos los derechos reservados © · Autores: Diego Ramos, Ashley Reyes y Jordan Vite · 2025</div>
   </div>
 
   <script>
