Update authors in footer of fisica_simulador.html

--- a/fisica_simulador.html
+++ b/fisica_simulador.html
@@ -269,7 +269,7 @@
       </div>
     </div>
 
-    <div class="footer">Todos los derechos reservados © · Autores: Diego Ramos Y Ashley Reyes · 2025</div>
+    <div class="footer">Todos los derechos reservados © · Autores: Diego Ramos, Ashley Reyes y Jordan Vite · 2025</div>
   </div>
 
   <script>
